--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ before_install:
   - hash -r
   - wget http://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh
   - bash Miniconda3-latest-Linux-x86_64.sh -b -f -p $MINICONDA;
+  - conda install -y scikit-learn  # TODO Remove this when librosa 0.5 is ready.
   - conda install -y -c conda-forge -c carlthome --file=requirements.txt
   
 install:
