--- a/.travis.yml
+++ b/.travis.yml
@@ -28,14 +28,16 @@ before_install:
   - hash -r
   - conda install -yc conda-forge scikit-learn librosa  # TODO This should not be needed for testing.
   - conda install -yc conda-forge --file=requirements.txt
-  - pandoc --from=markdown --to=rst --output=README.rst README.md
-  - rm README.md
 
 install:
   - python setup.py install
 
 script:
   - python setup.py test
+  
+before_deploy:
+  - pandoc --from=markdown --to=rst --output=README.rst README.md
+  - rm README.md
 
 deploy:
   provider: pypi
