--- a/.travis.yml
+++ b/.travis.yml
@@ -12,20 +12,20 @@ cache:
 addons:
   apt:
     packages:
+      - vorbis-tools
       - sox
-
+    
 before_install:   
-  - if [[ "$TRAVIS_PYTHON_VERSION" == "2.7" ]]; then
+  - if [ "$TRAVIS_PYTHON_VERSION" == "2.7" ]; then
       wget https://repo.continuum.io/miniconda/Miniconda2-latest-Linux-x86_64.sh -O miniconda.sh;
       export MINICONDA="$HOME/miniconda2";
     else
       wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
       export MINICONDA="$HOME/miniconda3";
     fi
-  - bash miniconda.sh -bfp $MINICONDA;
+  - bash miniconda.sh -bfp "$MINICONDA"
   - export PATH="$MINICONDA/bin:$PATH"
-  - hash -r
-  - conda install -yc conda-forge numpy pandoc scikit-learn librosa
+  - conda install -yc conda-forge pandoc numpy scikit-learn librosa
 
 install:
   - python setup.py install
