--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ addons:
     packages:
       - vorbis-tools
       - sox
+      - ffmpeg
 
 before_install:   
   - if [[ "$TRAVIS_PYTHON_VERSION" == "2.7" ]]; then
