--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ install:
   - pip install .
 
 script: 
-  - pytest
+  - python setup.py test
 
 before_deploy:
   - pandoc --from=markdown --to=rst --output=README.rst README.md
