--- a/.travis.yml
+++ b/.travis.yml
@@ -10,9 +10,8 @@ addons:
     - sox
     - pandoc
 before_install: pip install Cython # TODO This shouldn't be needed.
-install: pip install .
-before_script: pip install pytest librosa
-script: pytest
+install: python setup.py install
+script: python setup.py test
 after_script: pandoc --from=markdown --to=rst --output=README.rst README.md
 deploy:
   provider: pypi
