--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,9 @@ addons:
     - sox
     - pandoc
 before_install: pip install Cython # TODO This shouldn't be needed.
-install: python setup.py install
-script: python setup.py test
+install: pip install .
+before_script: pip install pytest librosa
+script: pytest
 after_script: pandoc --from=markdown --to=rst --output=README.rst README.md
 deploy:
   provider: pypi
