--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ before_install: pip install Cython # TODO This shouldn't be needed.
 install: pip install .
 before_script: pip install pytest librosa
 script: pytest
-after_script: pandoc --from=markdown --to=rst --output=README.rst README.md # TODO https://github.com/pypa/packaging-problems/issues/46
+after_script: pandoc --to=rst --output=README.rst README.md # TODO https://github.com/pypa/packaging-problems/issues/46
 deploy:
   provider: pypi
   user: carlthome
