--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: python
 python:
-- "3.6"
-- "2.7"
+- 3.6
+- 2.7
 cache: pip
 addons:
   apt:
@@ -11,7 +11,7 @@ addons:
 before_install: pip install cython # TODO This shouldn't be needed.
 install: pip install .
 before_script: pip install pytest pytest-pep8 pytest-cov librosa
-script: pytest --cov=pysndfx --pep8
+script: pytest --cov=. --pep8
 deploy:
   provider: pypi
   user: carlthome
