--- a/.travis.yml
+++ b/.travis.yml
@@ -10,10 +10,9 @@ addons:
     - sox
 before_install: pip install cython # TODO This shouldn't be needed.
 install: pip install .
-before_script: pip install pytest-cov librosa flake8
+before_script: pip install pytest-cov librosa
 script:
 - pytest --cov=pysndfx
-- flake8
 deploy:
   provider: pypi
   user: carlthome
