--- a/.travis.yml
+++ b/.travis.yml
@@ -2,14 +2,10 @@ os:
 - linux
 - windows
 - osx
-addons:
-  apt:
-    packages:
-    - ffmpeg
-    - sox
 before_install:
 
-- if [[ $TRAVIS_OS_NAME == 'windows' ]]
+-|
+if [[ $TRAVIS_OS_NAME == 'windows' ]]
   then
     wget https://repo.continuum.io/miniconda/Miniconda3-latest-Windows-x86_64.exe
     Miniconda3-latest-Windows-x86_64.exe /S /D=miniconda3
