--- a/.travis.yml
+++ b/.travis.yml
@@ -3,27 +3,17 @@ os:
 - linux
 - windows
 - osx
+dist: xenial
 before_install:
-
--|
-if [[ $TRAVIS_OS_NAME == 'windows' ]]
-then
-  wget https://repo.continuum.io/miniconda/Miniconda3-latest-Windows-x86_64.exe
-  Miniconda3-latest-Windows-x86_64.exe /S /D=miniconda3
-else
-  if [[ $TRAVIS_OS_NAME == 'linux' ]]
-  then
-    url=https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh
-  elif [[ $TRAVIS_OS_NAME == 'osx' ]]
-  then
-    url=https://repo.continuum.io/miniconda/Miniconda3-latest-MacOSX-x86_64.sh
+- if [[ $TRAVIS_OS_NAME == 'windows' ]]; then
+    choco install ffmpeg;
   fi
-
-  wget $url -o miniconda.sh
-  chmod +x miniconda.sh
-  ./miniconda.sh -bp
-fi
-
+- if [[ $TRAVIS_OS_NAME == 'linux' ]]; then
+    apt install ffmpeg;
+  fi
+- if [[ $TRAVIS_OS_NAME == 'osx' ]]; then
+    brew install ffmpeg;
+  fi
 install: pip install .
 before_script:
 - pip install pytest-cov librosa
