--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ os:
 before_install:
 - if [[ $TRAVIS_OS_NAME == 'windows' ]]; then
     choco install sox.portable;
+    choco install pip;
   fi
 - if [[ $TRAVIS_OS_NAME == 'linux' ]]; then
     apt install sox;
