--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 sudo: true
+dist: xenial
 language: sh
 os:
 - linux
@@ -9,7 +10,7 @@ before_install:
     choco install sox.portable;
     choco install pip;
   elif [[ $TRAVIS_OS_NAME == 'linux' ]]; then
-    sudo apt install -y sox;
+    sudo apt-get install -y sox;
   elif [[ $TRAVIS_OS_NAME == 'osx' ]]; then
     brew install sox;
   fi
