--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,8 @@ os:
 before_install:
 - if [[ $TRAVIS_OS_NAME == 'windows' ]]; then
     choco install sox.portable;
-    choco install pip;
+    curl https://bootstrap.pypa.io/get-pip.py -o get-pip.py;
+    python get-pip.py;
   elif [[ $TRAVIS_OS_NAME == 'linux' ]]; then
     sudo apt-get install -y ffmpeg sox;
   elif [[ $TRAVIS_OS_NAME == 'osx' ]]; then
