--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ before_install:
 - if [[ $TRAVIS_OS_NAME == 'windows' ]]; then
     choco install sox.portable;
     choco install python;
+    refreshenv;
     curl https://bootstrap.pypa.io/get-pip.py -o get-pip.py;
     python get-pip.py;
   elif [[ $TRAVIS_OS_NAME == 'linux' ]]; then
