--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,10 @@ before_install:
 - if [[ $TRAVIS_OS_NAME == 'windows' ]]; then
     choco install sox.portable;
     choco install python;
+    refreshenv;
+    hash -r;
     curl https://bootstrap.pypa.io/get-pip.py -o get-pip.py;
-    alias python=C:/python37/bin/python.exe;
+    alias python=C:\Python37\bin\python.exe;
     python get-pip.py;
   elif [[ $TRAVIS_OS_NAME == 'linux' ]]; then
     sudo apt-get install -y ffmpeg sox;
