--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,10 @@ before_install: |
   if [[ $TRAVIS_OS_NAME == 'windows' ]]
   then
     choco install ffmpeg sox.portable
-    choco install python pip
+    choco install python
+    export PATH=$PATH:C:\Python37\bin
+    wget https://bootstrap.pypa.io/get-pip.py
+    python get-pip.py
   elif [[ $TRAVIS_OS_NAME == 'linux' ]]
   then
     sudo apt-get install -y ffmpeg sox
