--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ os:
 before_install: |
   if [[ $TRAVIS_OS_NAME == 'windows' ]]
   then
-    choco install anaconda3 /JustMe /AddToPath
+    choco install miniconda3 /JustMe /AddToPath
     python --help
   elif [[ $TRAVIS_OS_NAME == 'linux' ]]
   then
