--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,8 @@ os:
 before_install: |
   if [[ $TRAVIS_OS_NAME == 'windows' ]]
   then
-    choco install miniconda3 --params="'/AddToPath:1'"
+    choco install python pip
+    choco install ffmpeg sox.portable
     bash -c "python --help"
   elif [[ $TRAVIS_OS_NAME == 'linux' ]]
   then
