--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,9 @@ os:
 before_install: |
   if [[ $TRAVIS_OS_NAME == 'windows' ]]
   then
-    py -m ensurepip
+    wget https://repo.continuum.io/miniconda/Miniconda3-latest-Windows-x86_64.exe
+    start /wait "" Miniconda3-latest-Windows-x86_64.exe /S /D=%UserProfile%\Miniconda3    
+    python -m ensurepip
     choco install ffmpeg sox.portable
   elif [[ $TRAVIS_OS_NAME == 'linux' ]]
   then
