--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ before_install: |
   if [[ $TRAVIS_OS_NAME == 'windows' ]]
   then
     wget https://repo.continuum.io/miniconda/Miniconda3-latest-Windows-x86_64.exe
-    Miniconda3-latest-Windows-x86_64.exe /S /D=%UserProfile%\Miniconda3    
+    ./Miniconda3-latest-Windows-x86_64.exe /S /D=%UserProfile%\Miniconda3    
     python -m ensurepip
     choco install ffmpeg sox.portable
   elif [[ $TRAVIS_OS_NAME == 'linux' ]]
