--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 sudo: true
 dist: xenial
-language: sh
+language: python
 os:
 - linux
 - windows
@@ -8,9 +8,6 @@ os:
 before_install: |
   if [[ $TRAVIS_OS_NAME == 'windows' ]]
   then
-    wget https://repo.continuum.io/miniconda/Miniconda3-latest-Windows-x86_64.exe
-    start /wait "" Miniconda3-latest-Windows-x86_64.exe /S /D=.
-    python -m ensurepip
     choco install ffmpeg sox.portable
   elif [[ $TRAVIS_OS_NAME == 'linux' ]]
   then
@@ -18,10 +15,9 @@ before_install: |
   elif [[ $TRAVIS_OS_NAME == 'osx' ]]
   then
     brew install ffmpeg sox
-    export PATH=$PATH:/Users/travis/Library/Python/2.7/bin
   fi
-install: pip install --user -e .
-before_script: pip install --user pytest pytest-cov pytest-flake8 librosa
+install: pip install -e .
+before_script: pip install pytest pytest-cov pytest-flake8 librosa
 script: pytest --flake8 --cov=pysndfx tests/
 deploy:
   provider: pypi
