--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 sudo: true
 dist: xenial
-language: sh
+language: generic
 os:
 - linux
 - windows
@@ -8,7 +8,7 @@ os:
 before_install: |
   if [[ $TRAVIS_OS_NAME == 'windows' ]]
   then
-    choco install python
+    python -m ensurepip
     choco install ffmpeg sox.portable
   elif [[ $TRAVIS_OS_NAME == 'linux' ]]
   then
@@ -17,8 +17,8 @@ before_install: |
   then
     brew install ffmpeg sox
   fi
-install: pip install --user -e .
-before_script: pip install --user pytest pytest-cov pytest-flake8 librosa
+install: pip install --user -e .[test]
+before_script: pip install --user pytest pytest-cov pytest-flake8
 script: pytest --flake8 --cov=pysndfx tests/
 deploy:
   provider: pypi
