--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ os:
 before_install: |
   if [[ $TRAVIS_OS_NAME == 'windows' ]]
   then
+    export PATH=$PATH:C:\Python37\Scripts
     python -m ensurepip
     choco install ffmpeg sox.portable
   elif [[ $TRAVIS_OS_NAME == 'linux' ]]
