--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,10 @@
-sudo: true
-dist: xenial
-language: generic
+language: minimal
 os:
 - linux
 - windows
 - osx
+sudo: true
+dist: xenial
 before_install: |
   if [[ $TRAVIS_OS_NAME == 'windows' ]]
   then
