--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,10 @@ matrix:
     - os: linux
       dist: xenial
       language: python
-      python:
-      - 3.6
-      - 2.7
+      python: '3.6'
     - os: windows
       language: minimal # TODO Windows builds don't support python yet.
+      python: '3.6'
     - os: osx
       language: python
       python: '3.6'
