--- a/.travis.yml
+++ b/.travis.yml
@@ -3,13 +3,20 @@ matrix:
     - os: linux
       dist: xenial
       language: python
-      python: '3.6'
+
     - os: windows
       language: minimal # TODO Windows builds don't support python yet.
-      python: '3.6'
+
     - os: osx
       language: python
-      python: '3.6'
+
+  exclude:
+    - os: osx
+    - python: '2.7' # TODO Doesn't work for some reason?
+
+python:
+- '3.6'
+- '2.7'
 
 cache: pip
 
