--- a/.travis.yml
+++ b/.travis.yml
@@ -11,13 +11,10 @@ matrix:
       python: '3.6'
 
     - os: windows
-      language: shell # TODO Windows builds don't support python yet.
+      language: shell
 
     - os: osx
-      language: python
-      python: '3.6'
-
-cache: pip
+      language: shell
 
 addons:
   apt:
@@ -34,9 +31,13 @@ addons:
     - sox.portable
 
 before_install: |
-  if [[ $TRAVIS_OS_NAME == 'windows' ]]
+  if [ $TRAVIS_OS_NAME == 'windows' ]
   then
     choco install python
+    python -m ensurepip
+  elif [ $TRAVIS_OS_NAME == 'osx' ]
+  then
+    brew install python
     python -m ensurepip
   fi
 
