--- a/.travis.yml
+++ b/.travis.yml
@@ -32,17 +32,13 @@ before_install: |
   then
     set -e
 
-    # Download and install sox.
-    wget https://downloads.sourceforge.net/project/sox/sox/14.4.2/sox-14.4.2-win32.exe
-    export PATH=$PATH:";$TRAVIS_BUILD_DIR"
-    echo $PATH
+    # Download sox.
+    wget -q https://downloads.sourceforge.net/project/sox/sox/14.4.2/sox-14.4.2-win32.exe -o bin/sox.exe
     sox --version
 
     # Also install ffmpeg (it's needed by the unit tests for decoding Ogg files).
-    wget https://ffmpeg.zeranoe.com/builds/win64/static/ffmpeg-4.1-win64-static.zip
-    unzip ffmpeg-4.1-win64-static.zip
-    export PATH=$PATH:";$TRAVIS_BUILD_DIR/ffmpeg-4.1-win64-static/bin"
-    echo $PATH
+    wget -q https://ffmpeg.zeranoe.com/builds/win64/static/ffmpeg-4.1-win64-static.zip -o ffmpeg.zip
+    unzip -jd bin ffmpeg.zip
     ffmpeg -version
 
     # Finally, install Python via conda. When Travis CI supports Python for Windows builds we can remove this.
