--- a/.travis.yml
+++ b/.travis.yml
@@ -31,15 +31,16 @@ before_install: |
   if [ $TRAVIS_OS_NAME == 'windows' ]
   then
     set -e
+    export PATH=$PATH:$TRAVIS_BUILD_DIR
     echo $PATH
 
     # Download sox.
-    wget -q https://downloads.sourceforge.net/project/sox/sox/14.4.2/sox-14.4.2-win32.exe -o /bin/sox.exe
+    wget -q https://downloads.sourceforge.net/project/sox/sox/14.4.2/sox-14.4.2-win32.exe -o sox.exe
     sox --version
 
     # Also install ffmpeg (it's needed by the unit tests for decoding Ogg files).
     wget -q https://ffmpeg.zeranoe.com/builds/win64/static/ffmpeg-4.1-win64-static.zip -o ffmpeg.zip
-    unzip -jd /bin ffmpeg.zip
+    unzip -j ffmpeg.zip
     ffmpeg -version
 
     # Finally, install Python via conda. When Travis CI supports Python for Windows builds we can remove this.
