--- a/.travis.yml
+++ b/.travis.yml
@@ -32,19 +32,16 @@ before_install: |
   then
     set -e
 
-    export PATH=$PATH:$TRAVIS_BUILD_DIR/bin
+    export PATH=$PATH:$TRAVIS_BUILD_DIR
     echo $PATH
 
-    # Download sox.
-    wget -q https://downloads.sourceforge.net/project/sox/sox/14.4.2/sox-14.4.2-win32.exe -O bin/sox.exe
+    wget https://downloads.sourceforge.net/project/sox/sox/14.4.2/sox-14.4.2-win32.exe
     sox --version
 
-    # Also install ffmpeg (it's needed by the unit tests for decoding Ogg files).
-    wget -q https://ffmpeg.zeranoe.com/builds/win64/static/ffmpeg-4.1-win64-static.zip -O ffmpeg.zip
-    unzip -j -d bin ffmpeg.zip
+    wget https://ffmpeg.zeranoe.com/builds/win64/static/ffmpeg-4.1-win64-static.zip
+    unzip -j ffmpeg-4.1-win64-static.zip
     ffmpeg -version
 
-    # Finally, install Python via conda. When Travis CI supports Python for Windows builds we can remove this.
     choco install miniconda3 --params="'/AddToPath:1'"
     export PATH="/c/tools/miniconda3/scripts:/c/tools/miniconda3/:$PATH"
   fi
