--- a/.travis.yml
+++ b/.travis.yml
@@ -30,18 +30,14 @@ addons:
 before_install: |
   if [ $TRAVIS_OS_NAME == 'windows' ]
   then
-    set -e
-
-    #wget https://ffmpeg.zeranoe.com/builds/win64/static/ffmpeg-4.1-win64-static.zip
-    #unzip -jd bin ffmpeg-4.1-win64-static.zip
-    #bin/ffmpeg.exe -version
-
     wget https://downloads.sourceforge.net/project/sox/sox/14.4.2/sox-14.4.2-win32.exe
     mv sox-14.4.2-win32.exe bin
     bin/sox.exe --version
 
     choco install miniconda3 --params="'/AddToPath:1'"
     export PATH="/c/tools/miniconda3/scripts:/c/tools/miniconda3/:$PATH"
+
+    conda install -yc conda-forge ffmpeg
   fi
 
 install:
