--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,3 +1,5 @@
+name: Test Python Package
+
 on:
   push:
     branches:
@@ -16,6 +18,8 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - uses: actions/setup-python@v1
+      with:
+        python-version: '3.7'
 
     - name: Install dependencies
       run: |
