--- a/setup.cfg
+++ b/setup.cfg
@@ -8,6 +8,6 @@ ignore = E501,E741
 multi_line_output = 3
 include_trailing_comma = True
 
-[pytest]
+[tool:pytest]
 log_cli = True
 log_level = INFO
