--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,6 +23,7 @@ jobs:
 
     - name: Install dependencies
       run: |
+        sudo apt update && sudo apt install libsndfile1-dev sox libsox-dev
         python -m pip install --upgrade pip
         pip install .[test]
 
