--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,6 +23,7 @@ jobs:
 
     - name: Install dependencies
       run: |
+        sudo apt update && sudo apt install libsndfile1-dev sox libsox-dev
         python -m pip install --upgrade pip
         pip install .[test]
 
@@ -36,4 +37,4 @@ jobs:
         pip install pytest
         pytest
 
-    - uses: actions/create-release@v1
+#   - uses: actions/create-release@v1
